src/test/ui/cast/cast-to-unsized-trait-object-suggestion.rs
fn main() {
    &1 as Send; //~ ERROR cast to unsized
    Box::new(1) as Send; //~ ERROR cast to unsized
}
